--- a/app/src/main/res/drawable/bg_exec_mini_extra_corner.xml
+++ b/app/src/main/res/drawable/bg_exec_mini_extra_corner.xml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
+<selector xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid
-        android:color="@color/white_1"/>
-    <corners
-        android:radius="18dp"/>
-</shape>
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <solid
+                android:color="@color/white_2"/>
+            <corners
+                android:radius="18dp"/>
+        </shape>
+    </item>
+    <item>
+        <shape android:shape="rectangle">
+            <solid
+                android:color="@color/white_1"/>
+            <corners
+                android:radius="18dp"/>
+        </shape>
+    </item>
+</selector>
