--- a/app/src/main/res/drawable/ic_redo.xml
+++ b/app/src/main/res/drawable/ic_redo.xml
@@ -1,5 +1,7 @@
 <vector android:height="18dp" android:viewportHeight="512"
-    android:viewportWidth="512" android:width="18dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@color/white"
+    android:viewportWidth="512" android:width="18dp" xmlns:android="http://schemas.android.com/apk/res/android"
+    android:tint="@color/gray_1">
+    <path
+        android:fillColor="@color/gray_1"
         android:pathData="M421.5,72.9c-4.4,2.7 -6.6,5.5 -7.5,9.6 -1.7,7.6 -0.5,9.3 24.3,34.2l23.1,23.3 -156.9,-0c-86.4,0.1 -161.5,0.5 -167,1 -38.9,3.5 -75.6,22.2 -100.3,51 -35.2,41.1 -46,95 -29.3,145.9 7.9,23.8 20.5,43.7 39.2,61.6 20.3,19.4 44.4,32 73.4,38.7l10,2.2 184.8,0.3c204.4,0.4 189,0.8 193.8,-5.9 4.8,-6.6 2.6,-17.1 -4.3,-21.3 -3.2,-2 -6.2,-2 -187.3,-2.5 -203,-0.6 -187.1,-0.1 -206.5,-6.7 -39.3,-13.4 -69.9,-48.4 -78.4,-89.5 -6.9,-33.6 1.3,-69.6 22.2,-97.1 19.5,-25.7 50.9,-43.3 83.2,-46.7 5.9,-0.6 68.9,-1 166,-1l156.4,-0 -22.1,22.2c-12.1,12.3 -22.6,23.4 -23.3,24.7 -1.8,3.6 -1.6,10.5 0.6,14.2 4.1,6.9 13.8,9.3 20.7,5 1.9,-1.1 19.4,-18.2 39,-38 38.3,-38.7 37.8,-38.1 36.2,-46.9 -0.6,-3.2 -5.4,-8.4 -37.3,-40.5 -20.2,-20.3 -37.9,-37.5 -39.4,-38.3 -3.7,-1.9 -9.7,-1.8 -13.3,0.5z" android:strokeColor="#00000000"/>
 </vector>
