--- a/app/src/main/res/layout/activity_editor.xml
+++ b/app/src/main/res/layout/activity_editor.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,11 +7,77 @@
     android:theme="@style/MyEmulatorTheme"
     tools:context=".ui.EditorActivity">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/gray_1"
+        app:elevation="0dp">
 
-    <ScrollView
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:layout_scrollFlags="scroll|enterAlways"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <RelativeLayout
+                android:id="@+id/rl_paste"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_exec_mini_extra_corner"
+                android:layout_marginStart="12dp"
+                android:layout_marginVertical="8dp">
+                <ImageView
+                    android:layout_centerInParent="true"
+                    android:padding="4dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_baseline_content_paste_24"/>
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/rl_undo"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_exec_mini_extra_corner"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginVertical="8dp">
+                <ImageView
+                    android:layout_centerInParent="true"
+                    android:padding="4dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_undo"/>
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/rl_redo"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_exec_mini_extra_corner"
+                android:layout_marginEnd="12dp"
+                android:layout_marginVertical="8dp">
+                <ImageView
+                    android:layout_centerInParent="true"
+                    android:padding="4dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_redo"/>
+            </RelativeLayout>
+        </LinearLayout>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        android:scrollbars="none"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,7 +86,8 @@
 
             <TextView
                 android:id="@+id/tv_line_num"
-                android:layout_width="50dp"
+                android:layout_width="wrap_content"
+                android:minWidth="50dp"
                 android:layout_height="match_parent"
                 android:background="@color/white_2"
                 android:fontFamily="@font/fira_code_regular"
@@ -51,13 +118,13 @@
                 android:ellipsize="none"/>
 
         </LinearLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
     <RelativeLayout
         android:id="@+id/rl_error_msg"
         android:visibility="gone"
         android:layout_width="match_parent"
         android:background="@color/white_0"
-        android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
         android:layout_height="wrap_content"
         android:minHeight="100dp">
         <View
@@ -82,4 +149,5 @@
             android:layout_margin="8dp"
             android:src="@drawable/ic_baseline_cancel_presentation_24"/>
     </RelativeLayout>
-</RelativeLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
