--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,7 +126,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Tutorial"
+                    android:text="Help"
                     android:textSize="15sp"
                     android:textColor="@color/black"/>
             </LinearLayout>
