--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,85 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white_1">
-    <ScrollView
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white_1"
+    android:theme="@style/MyEmulatorTheme">
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:background="@color/gray_1"
+        app:elevation="0dp">
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:layout_scrollFlags="scroll|enterAlways"/>
+    </com.google.android.material.appbar.AppBarLayout>
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="none"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:orientation="vertical">
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Editor"
-                android:textColor="@color/gray_0"
-                android:layout_marginBottom="4dp"
-                android:textSize="16sp"/>
+                android:textColor="@color/gray_1"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:layout_margin="12dp"/>
             <View
                 android:layout_width="match_parent"
-                android:layout_height="0.5dp"
-                android:background="@color/gray_2"
-                android:layout_marginBottom="8dp"/>
+                android:layout_height="1dp"
+                android:background="@color/gray_3"
+                android:layout_marginHorizontal="8dp"/>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp">
+                android:padding="12dp">
                 <TextView
-                    style="@style/MySettingsTextView"
-                    android:text="Adjust editor text size"/>
-                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/bg_gray_border"
-                    android:layout_alignParentEnd="true"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-                    <ImageView
-                        android:id="@+id/iv_dec"
-                        android:layout_width="18dp"
-                        android:layout_height="18dp"
-                        android:layout_marginStart="4dp"
-                        android:layout_marginEnd="20dp"
-                        android:src="@drawable/ic_baseline_remove_24"/>
-                    <TextView
-                        android:id="@+id/tv_point"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="5"
-                        android:textSize="14sp"
-                        android:layout_margin="4dp"
-                        android:textColor="@color/black"/>
-                    <ImageView
-                        android:id="@+id/iv_inc"
-                        android:layout_width="18dp"
-                        android:layout_height="18dp"
-                        android:layout_marginEnd="4dp"
-                        android:layout_marginStart="20dp"
-                        android:src="@drawable/ic_baseline_add_24"/>
-                </LinearLayout>
-            </RelativeLayout>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp">
-                <TextView
-                    style="@style/MySettingsTextView"
-                    android:text="Text Wrapping"/>
-                <Switch
-                    android:id="@+id/s_text_wrap"
+                    android:text="Adjust text size"
+                    android:textColor="@color/gray_1"/>
+                <ImageView
+                    android:id="@+id/iv_plus"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:textOn="On"
-                    android:textOff="Off"
-                    android:checked="false"
-                    tools:ignore="UseSwitchCompatOrMaterialXml" />
+                    android:src="@drawable/ic_baseline_add_24"
+                    android:layout_alignParentEnd="true"/>
+                <TextView
+                    android:id="@+id/tv_point"
+                    android:layout_toStartOf="@id/iv_plus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="18"
+                    android:textSize="16sp"
+                    android:textColor="@color/gray_1"
+                    android:layout_marginHorizontal="8dp"/>
+                <ImageView
+                    android:id="@+id/iv_minus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_baseline_remove_24"
+                    android:layout_toStartOf="@id/tv_point"/>
             </RelativeLayout>
         </LinearLayout>
-    </ScrollView>
-</RelativeLayout>
+
+    </androidx.core.widget.NestedScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
