help manual update

--- a/app/src/main/res/layout/layout_registers.xml
+++ b/app/src/main/res/layout/layout_registers.xml
@@ -25,7 +25,7 @@
     </RelativeLayout>
     <TableLayout
         android:id="@+id/table_layout"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
