--- a/app/src/main/res/layout/activity_emulate.xml
+++ b/app/src/main/res/layout/activity_emulate.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/bg_app_gradient"
     android:theme="@style/MyEmulatorTheme">
     <com.google.android.material.appbar.AppBarLayout
@@ -24,7 +25,7 @@
                 android:id="@+id/tv_next"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Next:"
+                android:text="Executed:"
                 android:layout_marginVertical="10dp"
                 android:layout_marginStart="10dp"
                 android:fontFamily="@font/fira_code_regular"
@@ -34,7 +35,7 @@
                 android:id="@+id/tv_exec"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="MOV AL,BL"
+                tools:text="MOV AL,BL"
                 android:layout_margin="10dp"
                 android:fontFamily="@font/fira_code_regular"
                 android:textColor="@color/gray_2"
