--- a/app/src/main/res/layout/layout_registers.xml
+++ b/app/src/main/res/layout/layout_registers.xml
@@ -2,121 +2,126 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginHorizontal="8dp"
-    android:layout_marginBottom="4dp"
-    android:background="@drawable/bg_exec_mini">
+    android:layout_height="wrap_content">
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:orientation="horizontal">
-        <TextView
-            style="@style/MyEmulatorTextView"
-            android:text="Registers" />
-
-        <ImageView
-            android:id="@+id/iv_expand"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/ic_baseline_expand_more_24" />
-    </RelativeLayout>
-    <TableLayout
-        android:id="@+id/table_layout"
-        android:visibility="visible"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginHorizontal="8dp"
-        android:background="@color/white">
-        <TableRow
-            android:layout_margin="4dp">
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/bg_exec_mini">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:orientation="horizontal">
             <TextView
-                style="@style/MyRegisterItemKeyStyle"/>
-            <TextView
-                style="@style/MyRegisterItemValueStyle"
-                android:text="H"/>
-            <TextView
-                style="@style/MyRegisterItemValueStyle"
-                android:text="L"/>
-        </TableRow>
-        <TableRow
-            android:layout_height="1dp"
-            android:background="@color/white_2">
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"/>
-        </TableRow>
-        <TableRow
-            android:layout_margin="4dp">
-            <TextView
-                style="@style/MyRegisterItemKeyStyle"
-                android:text="AX"/>
-            <TextView
-                android:id="@+id/ah"
-                style="@style/MyRegisterItemValueStyle"/>
-            <TextView
-                android:id="@+id/al"
-                style="@style/MyRegisterItemValueStyle"/>
-        </TableRow>
-        <TableRow
-            android:layout_height="1dp"
-            android:background="@color/white_2">
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"/>
-        </TableRow>
-        <TableRow
-            android:layout_margin="4dp">
-            <TextView
-                style="@style/MyRegisterItemKeyStyle"
-                android:text="CX"/>
-            <TextView
-                android:id="@+id/ch"
-                style="@style/MyRegisterItemValueStyle"/>
-            <TextView
-                android:id="@+id/cl"
-                style="@style/MyRegisterItemValueStyle"/>
-        </TableRow>
-        <TableRow
-            android:layout_height="1dp"
-            android:background="@color/white_2">
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"/>
-        </TableRow>
-        <TableRow
-            android:layout_margin="4dp">
-            <TextView
-                style="@style/MyRegisterItemKeyStyle"
-                android:text="DX"/>
-            <TextView
-                android:id="@+id/dh"
-                style="@style/MyRegisterItemValueStyle"/>
-            <TextView
-                android:id="@+id/dl"
-                style="@style/MyRegisterItemValueStyle"/>
-        </TableRow>
-        <TableRow
-            android:layout_height="1dp"
-            android:background="@color/white_2">
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"/>
-        </TableRow>
-        <TableRow
-            android:layout_margin="4dp">
-            <TextView
-                style="@style/MyRegisterItemKeyStyle"
-                android:text="BX"/>
-            <TextView
-                android:id="@+id/bh"
-                style="@style/MyRegisterItemValueStyle"/>
-            <TextView
-                android:id="@+id/bl"
-                style="@style/MyRegisterItemValueStyle"/>
-        </TableRow>
-    </TableLayout>
+                style="@style/MyEmulatorTextView"
+                android:text="Registers" />
+
+            <!--        <ImageView-->
+            <!--            android:id="@+id/iv_expand"-->
+            <!--            android:layout_width="wrap_content"-->
+            <!--            android:layout_height="wrap_content"-->
+            <!--            android:layout_alignParentEnd="true"-->
+            <!--            android:src="@drawable/ic_baseline_expand_more_24" />-->
+        </RelativeLayout>
+        <TableLayout
+            android:id="@+id/table_layout"
+            android:visibility="visible"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginHorizontal="8dp"
+            android:background="@color/white">
+            <TableRow
+                android:layout_margin="4dp">
+                <TextView
+                    style="@style/MyRegisterItemKeyStyle"/>
+                <TextView
+                    style="@style/MyRegisterItemValueStyle"
+                    android:text="H"/>
+                <TextView
+                    style="@style/MyRegisterItemValueStyle"
+                    android:text="L"/>
+            </TableRow>
+            <TableRow
+                android:layout_height="1dp"
+                android:background="@color/white_2">
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"/>
+            </TableRow>
+            <TableRow
+                android:layout_margin="4dp">
+                <TextView
+                    style="@style/MyRegisterItemKeyStyle"
+                    android:text="AX"/>
+                <TextView
+                    android:id="@+id/ah"
+                    style="@style/MyRegisterItemValueStyle"/>
+                <TextView
+                    android:id="@+id/al"
+                    style="@style/MyRegisterItemValueStyle"/>
+            </TableRow>
+            <TableRow
+                android:layout_height="1dp"
+                android:background="@color/white_2">
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"/>
+            </TableRow>
+            <TableRow
+                android:layout_margin="4dp">
+                <TextView
+                    style="@style/MyRegisterItemKeyStyle"
+                    android:text="CX"/>
+                <TextView
+                    android:id="@+id/ch"
+                    style="@style/MyRegisterItemValueStyle"/>
+                <TextView
+                    android:id="@+id/cl"
+                    style="@style/MyRegisterItemValueStyle"/>
+            </TableRow>
+            <TableRow
+                android:layout_height="1dp"
+                android:background="@color/white_2">
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"/>
+            </TableRow>
+            <TableRow
+                android:layout_margin="4dp">
+                <TextView
+                    style="@style/MyRegisterItemKeyStyle"
+                    android:text="DX"/>
+                <TextView
+                    android:id="@+id/dh"
+                    style="@style/MyRegisterItemValueStyle"/>
+                <TextView
+                    android:id="@+id/dl"
+                    style="@style/MyRegisterItemValueStyle"/>
+            </TableRow>
+            <TableRow
+                android:layout_height="1dp"
+                android:background="@color/white_2">
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"/>
+            </TableRow>
+            <TableRow
+                android:layout_margin="4dp">
+                <TextView
+                    style="@style/MyRegisterItemKeyStyle"
+                    android:text="BX"/>
+                <TextView
+                    android:id="@+id/bh"
+                    style="@style/MyRegisterItemValueStyle"/>
+                <TextView
+                    android:id="@+id/bl"
+                    style="@style/MyRegisterItemValueStyle"/>
+            </TableRow>
+        </TableLayout>
+    </LinearLayout>
 </LinearLayout>
