--- a/app/src/main/res/layout/layout_segments.xml
+++ b/app/src/main/res/layout/layout_segments.xml
@@ -2,66 +2,71 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginHorizontal="8dp"
-    android:layout_marginBottom="4dp"
-    android:background="@drawable/bg_exec_mini">
+    android:layout_height="wrap_content">
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:orientation="horizontal">
-        <TextView
-            style="@style/MyEmulatorTextView"
-            android:text="Segments" />
-        <ImageView
-            android:id="@+id/iv_expand"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_baseline_expand_more_24"
-            android:layout_alignParentEnd="true"/>
-    </RelativeLayout>
-    <TableLayout
-        android:id="@+id/table_layout"
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginHorizontal="8dp"
-        android:background="@color/white">
-        <TableRow
-            android:padding="4dp">
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/bg_exec_mini">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:orientation="horizontal">
             <TextView
-                style="@style/MyRegisterItemKeyStyle"
-                android:text="DS"/>
-            <TextView
-                style="@style/MyRegisterItemValueStyle"/>
-            <TextView
-                style="@style/MyRegisterItemKeyStyle"
-                android:text="CS"/>
-            <TextView
-                style="@style/MyRegisterItemValueStyle"/>
-        </TableRow>
-        <TableRow
-            android:layout_height="1dp"
-            android:background="@color/white_2">
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"/>
-        </TableRow>
-        <TableRow
-            android:padding="4dp">
-            <TextView
-                style="@style/MyRegisterItemKeyStyle"
-                android:text="SS"/>
-            <TextView
-                style="@style/MyRegisterItemValueStyle"/>
-            <TextView
-                style="@style/MyRegisterItemKeyStyle"
-                android:text="ES"/>
-            <TextView
-                style="@style/MyRegisterItemValueStyle"/>
-        </TableRow>
-    </TableLayout>
+                style="@style/MyEmulatorTextView"
+                android:text="Segments" />
+            <!--        <ImageView-->
+            <!--            android:id="@+id/iv_expand"-->
+            <!--            android:layout_width="wrap_content"-->
+            <!--            android:layout_height="wrap_content"-->
+            <!--            android:src="@drawable/ic_baseline_expand_more_24"-->
+            <!--            android:layout_alignParentEnd="true"/>-->
+        </RelativeLayout>
+        <TableLayout
+            android:id="@+id/table_layout"
+            android:visibility="visible"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginHorizontal="8dp"
+            android:background="@color/white">
+            <TableRow
+                android:padding="4dp">
+                <TextView
+                    style="@style/MyRegisterItemKeyStyle"
+                    android:text="DS"/>
+                <TextView
+                    style="@style/MyRegisterItemValueStyle"/>
+                <TextView
+                    style="@style/MyRegisterItemKeyStyle"
+                    android:text="CS"/>
+                <TextView
+                    style="@style/MyRegisterItemValueStyle"/>
+            </TableRow>
+            <TableRow
+                android:layout_height="1dp"
+                android:background="@color/white_2">
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"/>
+            </TableRow>
+            <TableRow
+                android:padding="4dp">
+                <TextView
+                    style="@style/MyRegisterItemKeyStyle"
+                    android:text="SS"/>
+                <TextView
+                    style="@style/MyRegisterItemValueStyle"/>
+                <TextView
+                    style="@style/MyRegisterItemKeyStyle"
+                    android:text="ES"/>
+                <TextView
+                    style="@style/MyRegisterItemValueStyle"/>
+            </TableRow>
+        </TableLayout>
+    </LinearLayout>
 </LinearLayout>
